--- a/api/src/templates/memberbooth_box_expired.subject.html
+++ b/api/src/templates/memberbooth_box_expired.subject.html
@@ -1,1 +1,1 @@
-Stockholm Makerspace - Din låda har blivit utgallrad / Your lab storage box has been forfeited
+Stockholm Makerspace - Din labblåda rensas snart ut / Your lab storage box will soon be removed
