--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -2332,3 +2332,36 @@ code {
         }
     }
 }
+
+.label-id-search-popover {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: #fff;
+    border: 2px solid #333;
+    border-radius: 8px;
+    padding: 1em;
+    z-index: 100;
+    width: 320px;
+    max-width: 90vw;
+}
+.label-id-search-popover .close-btn {
+    position: absolute;
+    top: 6px;
+    right: 10px;
+    font-size: 1.5em;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+.label-search-result {
+    width: 100%;
+    text-align: left;
+    font-size: 1.2em;
+    padding: 0.5em;
+    margin-bottom: 0.2em;
+    background: #eee;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
