--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1222,6 +1222,7 @@ $palette-red: $palette4;
         color: white;
         justify-content: center;
         text-align: center;
+        align-items: center;
 
         h2 {
             font-family: "Bitter";
@@ -1336,15 +1337,19 @@ $palette-red: $palette4;
         font-style: italic;
     }
 
-    .uk-button-primary {
+    .uk-button {
         margin-top: 20px;
-        background-color: $palette2;
+
         box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
         transition: 200ms box-shadow;
 
         &:hover {
             box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.2);
         }
+    }
+
+    .uk-button-primary {
+        background-color: $palette2;
     }
 
     @media screen and (max-width: 900px) {
