--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1230,6 +1230,61 @@ $palette-red: $palette4;
         }
     }
 
+    &.quiz-failed {
+        background-color: $palette4;
+        color: white;
+
+        h1 {
+            color: white;
+        }
+
+        .question-text {
+            color: rgba(255, 255, 255, 0.9);
+        }
+
+        .question-answer-info-incorrect {
+            color: white;
+            font-weight: bold;
+            background: rgba(0, 0, 0, 0.2);
+            padding: 15px;
+            border-radius: 8px;
+            margin: 20px 0;
+        }
+
+        .question-answer-description {
+            color: rgba(255, 255, 255, 0.9);
+        }
+
+        .question-options li {
+            background-color: rgba(255, 255, 255, 0.15);
+            border-color: rgba(255, 255, 255, 0.3);
+            color: white;
+
+            &.question-option-correct {
+                background: $palette-green;
+                border-color: $palette-green;
+            }
+
+            &.question-option-selected.question-option-incorrect {
+                background: #c0392b;
+                border-color: #c0392b;
+            }
+
+            &.question-option-incorrect:not(.question-option-selected) {
+                opacity: 0.5;
+            }
+        }
+
+        .uk-button-danger {
+            background-color: #c0392b;
+            border: none;
+
+            &:hover {
+                background-color: #a93226;
+            }
+        }
+    }
+
     h1 {
         font-family: "Bitter", serif;
         margin-top: 0px;
@@ -1449,6 +1504,31 @@ $palette-red: $palette4;
     display: flex;
     flex-direction: column;
 
+    .course-item-wrapper {
+        margin-bottom: 30px;
+    }
+
+    .course-item-wrapper-new-version {
+        .course-item {
+            margin-bottom: 0;
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
+        }
+    }
+
+    .course-new-version-message {
+        background: #ffba4abf;
+        color: #805107;
+        padding: 6px 12px;
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
+        font-size: 0.7em;
+        box-shadow:
+            0px 0.9px 2.2px rgba(0, 0, 0, 0.072),
+            0px 1.7px 4.2px rgba(0, 0, 0, 0.086),
+            0px 4px 10px rgba(0, 0, 0, 0.12);
+    }
+
     .course-item {
         display: flex;
         flex-direction: row;
@@ -1482,11 +1562,14 @@ $palette-red: $palette4;
         }
 
         .course-not-completed,
-        .course-completed {
+        .course-completed,
+        .course-new-version,
+        .course-failed {
+            text-wrap: nowrap;
             flex-grow: 0;
             flex-shrink: 0;
             align-self: stretch;
-            width: 150px;
+            width: 160px;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
@@ -1514,6 +1597,18 @@ $palette-red: $palette4;
             transition: 100ms background-color;
         }
 
+        .course-new-version {
+            background: #f5a623;
+            color: white;
+            transition: 100ms background-color;
+        }
+
+        .course-failed {
+            background: #e2364a;
+            color: white;
+            transition: 100ms background-color;
+        }
+
         &:hover {
             background: color.adjust(#fff, $lightness: -2%);
         }
@@ -1525,8 +1620,16 @@ $palette-red: $palette4;
             );
         }
 
+        &:hover .course-new-version {
+            background: color.adjust(
+                color.adjust(#f5a623, $lightness: -5%),
+                $saturation: 12%
+            );
+        }
+
         .course-not-completed > div,
-        .course-completed > div {
+        .course-completed > div,
+        .course-new-version > div {
             position: relative;
             top: -10px;
             left: -10px;
