--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1301,6 +1301,25 @@ $palette-red: $palette4;
         margin-bottom: 5px;
     }
 
+    // Style for images in quiz (inline images from markdown)
+    img {
+        max-width: 95%;
+        max-height: 600px;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        border-radius: 4px;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        object-fit: contain;
+
+        @media screen and (max-width: 768px) {
+            max-width: 100%;
+            max-height: 400px;
+        }
+    }
+
     .quiz-button-start {
         align-self: center;
         width: 200px;
